# Haskercises

./: ChangeLog.md  Haskercises.cabal  LICENSE  README.md  links.txt  package.yaml
.stack-work/install/x86_64-osx/lts-7.1/8.0.1/flag-cache/: aeson-0.11.2.1-ByXhYhAOjwT2lX0EEzDlEU  aeson-pretty-0.8.2-8tC2vmXHYL41zPtfZsYLtW  attoparsec-0.13.1.0-2AyzLuPV4T95RcYDl03Ghe  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  scientific-0.3.4.9-ENrtAw13zTS8y4klTK3l4D  tagged-0.8.5-CtgV6EcN0do8F92i1S6iYx  transformers-compat-0.5.1.4-81lZyuOJOvsD0zyCv2TKld  unordered-containers-0.2.7.1-9LORRyFpDhM8ZtazbO2Bhp
src/: Haskercise1.hs  Haskercise10.hs  Haskercise11.hs  Haskercise12.hs  Haskercise13.hs  Haskercise14.hs  Haskercise15.hs  Haskercise16.hs  Haskercise17.hs  Haskercise18.hs  Haskercise19.hs  Haskercise2.hs  Haskercise20.hs  Haskercise21.hs  Haskercise22.hs  Haskercise23.hs  Haskercise3.hs  Haskercise4.hs  Haskercise5.hs  Haskercise6.hs  Haskercise7.hs  Haskercise8.hs  Haskercise9.hs  data.json
src/Monads/: MonadEx1.hs  MonadEx2.hs  MonadEx3.hs  MonadEx4.hs
src/ds/: Tree.hs
