name:                Haskercises
version:             0.1.0.0
synopsis:            Multiple general exercises and examples worked in Haskell
description:         Please see README.md
homepage:            https://github.com/githubuser/Haskercises#readme
license:             BSD3
license-file:        LICENSE
author:              Sampath Singamsetty
maintainer:          Singamsetty.Sampath@gmail.com
copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable exercises
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time >= 1.6.0.1,
                       containers >= 0.5,
                       mtl >= 2.2.1,
                       split,
                       aeson >= 0.11.2.1,
                       aeson-pretty >= 0.8.2,
                       bytestring >= 0.10.8.1,
                       text >= 1.2.2.1,
                       random,
                       QuickCheck >= 2.8.2

source-repository head
  type:     git
  location: https://github.com/singamsetty/haskercises
